Fix overlaped socialicons on homepage #141

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ h4, .h4 { margin: 20px 0 13px 0; padding: 0; font-size: 16px; color: #555; }
 }
 .socialicons a { font-size: 30px; text-decoration: none; margin: 0 5px 0 0;}
 .socialicons p {display: inline-block; margin: 4px 8px !important; overflow: hidden;}
-#homepage .socialicons {text-align:center; margin-top:140px;}
+#homepage .socialicons {text-align:center; margin-top: 190px;}
 .title-right{float: right; text-align: right;}
 .detail-action-buttons{margin-top: 22px;}
 .detail-action-buttons a{ margin-left: 10px; }
